--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -1,1 +1,12 @@
-<p>home works!</p>
+<div class="home d-flex vh-100 vw-100 justify-content-center align-items-center flex-column">
+    <div class="home_container">
+        <button (click)="changeMessage()" class="mb-2">{{message}}</button>
+        <div *ngIf="login; else elseBlock">
+            <app-login></app-login>
+        </div>
+        <ng-template #elseBlock>
+            <app-register></app-register>
+        </ng-template>
+    </div>
+    
+</div>
