Add pokeball selector compent structure style functions

--- a/src/app/components/pokeball-selector-component/pokeball-selector-component.component.html
+++ b/src/app/components/pokeball-selector-component/pokeball-selector-component.component.html
@@ -1,3 +1,6 @@
-<section class="w-100 vh-100">
 
-</section>
+<div class="pokeball w-100 mb-5">
+    <p-toast></p-toast>
+    <img src={{this.currentPokeBall.url}} alt="" class="pokeball_art" id="pokeball">
+    <p-menu [model]="items"></p-menu>
+</div>
