Change name to pokeballSelector

--- a/src/app/views/grass/grass.component.html
+++ b/src/app/views/grass/grass.component.html
@@ -4,5 +4,5 @@
         <p-button  label="logout" styleClass=" p-button-secondary " (onClick)="logout()"></p-button>
     </div>
     <app-pokemon-view-component class="w-100"></app-pokemon-view-component>
-    <app-pokeball-selector-component></app-pokeball-selector-component>
+    <app-pokeball-selector></app-pokeball-selector>
 </div>
