Fix call to pokemonView component

--- a/src/app/views/grass/grass.component.html
+++ b/src/app/views/grass/grass.component.html
@@ -3,6 +3,6 @@
         <p-button  label="Capture History" styleClass=" p-button-primary " (onClick)="navigate('captures')"></p-button>
         <p-button  label="logout" styleClass=" p-button-secondary " (onClick)="logout()"></p-button>
     </div>
-    <app-pokemon-view-component class="w-100"></app-pokemon-view-component>
+    <app-pokemon-view class="w-100"></app-pokemon-view>
     <app-pokeball-selector></app-pokeball-selector>
 </div>
